syntax = 'proto3';

import "logic.proto";

package pb;

message DispatchMessage {
    string body = 1;
    User recipient = 2;
    User sender = 3;
    int64 created_at = 4;
    string status = 5;
}

message DispatchReq {
    User sender = 1;
    User accepter = 2;
    Room room = 3;
    DispatchMessage message = 4;
}

message DispatchResp {

}

service WsConn {
    // 消息转发
    rpc Dispatch(DispatchReq) returns(DispatchResp);
}